frame/support/test/tests/construct_runtime_ui/exclude_undefined_part.stderr
error: Invalid pallet part specified, the pallet `Pallet` doesn't have the `Call` part. Available parts are: `Pallet`, `Storage`.
  --> tests/construct_runtime_ui/exclude_undefined_part.rs:30:34
   |
30 |         Pallet: pallet exclude_parts { Call },
   |                                        ^^^^

error[E0412]: cannot find type `BlockNumber` in this scope
  --> tests/construct_runtime_ui/exclude_undefined_part.rs:20:35
   |
20 | pub type Header = generic::Header<BlockNumber, BlakeTwo256>;
   |                                   ^^^^^^^^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
20 | pub type Header<BlockNumber> = generic::Header<BlockNumber, BlakeTwo256>;
   |                +++++++++++++

error[E0412]: cannot find type `RuntimeCall` in this scope
  --> tests/construct_runtime_ui/exclude_undefined_part.rs:22:64
   |
22 | pub type UncheckedExtrinsic = generic::UncheckedExtrinsic<u32, RuntimeCall, Signature, ()>;
   |                                                                ^^^^^^^^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
22 | pub type UncheckedExtrinsic<RuntimeCall> = generic::UncheckedExtrinsic<u32, RuntimeCall, Signature, ()>;
   |                            +++++++++++++

error[E0412]: cannot find type `Runtime` in this scope
  --> tests/construct_runtime_ui/exclude_undefined_part.rs:24:25
   |
24 | impl pallet::Config for Runtime {}
   |                         ^^^^^^^ not found in this scope
